add remaining MENG

--- a/about.html
+++ b/about.html
@@ -370,6 +370,13 @@
                                     </h6>
                                 </div>
                                 <div class="col-md-3 col-xs-6 team-max-width">
+                                    <img class="rounded-circle" src="images/berkeley/headshot-carras.jpeg">
+                                    <h6 class="p-3">
+                                        Noé Carras <br>
+                                        <small class="text-muted">Masters Student, UC Berkeley</small>
+                                    </h6>
+                                </div>
+                                <div class="col-md-3 col-xs-6 team-max-width">
                                     <img class="rounded-circle" src="images/berkeley/headshot-cheng.png">
                                     <h6 class="p-3">
                                         Eric Cheng <br>
@@ -461,6 +468,20 @@
                                     </h6>
                                 </div>
                                 <div class="col-md-3 col-xs-6 team-max-width">
+                                    <img class="rounded-circle" src="images/berkeley/headshot-li.jpg">
+                                    <h6 class="p-3">
+                                        Ruicong Li <br>
+                                        <small class="text-muted">Masters Student, UC Berkeley</small>
+                                    </h6>
+                                </div>
+                                <div class="col-md-3 col-xs-6 team-max-width">
+                                    <img class="rounded-circle" src="images/berkeley/headshot-liu.jpg">
+                                    <h6 class="p-3">
+                                        Jessica Liu <br>
+                                        <small class="text-muted">Masters Student, UC Berkeley</small>
+                                    </h6>
+                                </div>
+                                <div class="col-md-3 col-xs-6 team-max-width">
                                     <img class="rounded-circle" src="images/rutgers/headshot-mahmood.jpg">
                                     <h6 class="p-3">
                                         Malaika Mahmood <br>
@@ -479,6 +500,13 @@
                                     <h6 class="p-3">
                                         Matthew Nice <br>
                                         <small class="text-muted">PhD Student, Vanderbilt University</small>
+                                    </h6>
+                                </div>
+                                <div class="col-md-3 col-xs-6 team-max-width">
+                                    <img class="rounded-circle" src="images/berkeley/headshot-niu.jpeg">
+                                    <h6 class="p-3">
+                                        Dantong Niu <br>
+                                        <small class="text-muted">Masters Student, UC Berkeley</small>
                                     </h6>
                                 </div>
                                 <div class="col-md-3 col-xs-6 team-max-width">
@@ -521,6 +549,20 @@
                                     <h6 class="p-3">
                                         Yiling You <br>
                                         <small class="text-muted">PhD Student, UC Berkeley</small>
+                                    </h6>
+                                </div>
+                                <div class="col-md-3 col-xs-6 team-max-width">
+                                    <img class="rounded-circle" src="images/berkeley/headshot-zhang.jpg">
+                                    <h6 class="p-3">
+                                        Junqing Zhang <br>
+                                        <small class="text-muted">Masters Student, UC Berkeley</small>
+                                    </h6>
+                                </div>
+                                <div class="col-md-3 col-xs-6 team-max-width">
+                                    <img class="rounded-circle" src="images/berkeley/headshot-zhou.jpg">
+                                    <h6 class="p-3">
+                                        Chang Zhou <br>
+                                        <small class="text-muted">Masters Student, UC Berkeley</small>
                                     </h6>
                                 </div>
                             </div>
