Updated several team member positions.

--- a/about.html
+++ b/about.html
@@ -221,17 +221,10 @@
                                     </h6>
                                 </div> 
                                 <div class="col-md-3 col-xs-6 team-max-width">
-                                    <img class="rounded-circle" src="images/arizona/headshot-bunting.jpg">
+                                    <img class="rounded-circle" src="images/vanderbilt/headshot-bunting.jpg">
                                     <h6 class="p-3">
                                         Matthew Bunting <br>
-                                        <small class="text-muted">University Lead, University of Arizona</small>
-                                    </h6>
-                                </div>
-                                <div class="col-md-3 col-xs-6 team-max-width">
-                                    <img class="rounded-circle" src="images/temple/headshot-khoudari.jpg">
-                                    <h6 class="p-3">
-                                        Nour Khoudari<br>
-                                        <small class="text-muted">Deputy for Temple University</small>
+                                        <small class="text-muted">Deputy for Vanderbilt University</small>
                                     </h6>
                                 </div>
                                 <div class="col-md-3 col-xs-6 team-max-width">
@@ -239,6 +232,20 @@
                                     <h6 class="p-3">
                                         Sean McQuade <br>
                                         <small class="text-muted">Deputy for Rutgers University</small>
+                                    </h6>
+                                </div>
+                                <div class="col-md-3 col-xs-6 team-max-width">
+                                    <img class="rounded-circle" src="images/vanderbilt/headshot-wagner.jpg">
+                                    <h6 class="p-3">
+                                        Riley Wagner <br>
+                                        <small class="text-muted">Program Coordinator, Vanderbilt University</small>
+                                    </h6>
+                                </div>
+                                <div class="col-md-3 col-xs-6 team-max-width">
+                                    <img class="rounded-circle" src="images/temple/headshot-yao.jpg">
+                                    <h6 class="p-3">
+                                        Mengsha Yao<br>
+                                        <small class="text-muted">Deputy for Temple University</small>
                                     </h6>
                                 </div>
                             </div>
@@ -264,10 +271,10 @@
                                     </h6>
                                 </div> 
                                 <div class="col-md-3 col-xs-6 team-max-width">
-                                    <img class="rounded-circle" src="images/arizona/headshot-bunting.jpg">
+                                    <img class="rounded-circle" src="images/vanderbilt/headshot-bunting.jpg">
                                     <h6 class="p-3">
                                         Matthew Bunting <br>
-                                        <small class="text-muted">Postdoctoral Researcher, University of Arizona</small>
+                                        <small class="text-muted">Postdoctoral Researcher, Vanderbilt University</small>
                                     </h6>
                                 </div>
                                 <div class="col-md-3 col-xs-6 team-max-width">
@@ -630,6 +637,7 @@
                                         <small class="text-muted">Research Group Manager, GM Research</small>
                                     </h6>
                                 </div> 
+<!--                                 TODO update title and affiliation for Maria Laura Delle Monache -->
                                 <div class="col-md-3 col-xs-6 team-max-width">
                                     <img class="rounded-circle" src="images/inria/headshot-dellemonache.jpg">
                                     <h6 class="p-3">
@@ -888,13 +896,6 @@
                                         <small class="text-muted">Undergraduate Student, UC Berkeley</small>
                                     </h6>
                                 </div> 
-                                <div class="col-md-3 col-xs-6 team-max-width">
-                                    <img class="rounded-circle" src="images/arizona/headshot-wagner.jpg">
-                                    <h6 class="p-3">
-                                        Riley Wagner <br>
-                                        <small class="text-muted">Undergraduate Student, University of Arizona</small>
-                                    </h6>
-                                </div>
                                 <div class="col-md-3 col-xs-6 team-max-width">
                                     <img class="rounded-circle" src="images/berkeley/headshot-mwang.png">
                                     <h6 class="p-3">
