--- a/index.html
+++ b/index.html
@@ -196,8 +196,8 @@
                             Department of Mathematics, Temple University
                         </p>
                         <p>
-                            <b>Jonathan Sprinkle</b>, Litton Industries John M. Leonis Distinguished Associate Professor, 
-                            Department of Electrical and Computer Engineering, University of Arizona
+                            <b>Jonathan Sprinkle</b>, Professor, 
+                            Department of Computer Science, Vanderbilt University
                         </p>
                         <p>
                             <b>Daniel Work</b>, Associate Professor,
