Updated and added member info

--- a/about.html
+++ b/about.html
@@ -142,6 +142,13 @@
                                     </h6>
                                 </div>
                                 <div class="col-md-3 col-xs-6 team-max-width">
+                                    <img class="rounded-circle" src="images/berkeley/headshot-dellemonache.jpg">
+                                    <h6 class="p-3">
+                                        Maria Laura Delle Monache <br>
+                                        <small class="text-muted">Co-Principal Investigator & Professor, UC Berkeley</small>
+                                    </h6>
+                                </div>
+                                <div class="col-md-3 col-xs-6 team-max-width">
                                     <img class="rounded-circle" src="images/berkeley/headshot-lee.jpg">
                                     <h6 class="p-3">
                                         Jonathan Lee <br>
@@ -274,7 +281,7 @@
                                     <img class="rounded-circle" src="images/vanderbilt/headshot-bunting.jpg">
                                     <h6 class="p-3">
                                         Matthew Bunting <br>
-                                        <small class="text-muted">Postdoctoral Researcher, Vanderbilt University</small>
+                                        <small class="text-muted">Research and Development Scientist, Vanderbilt University</small>
                                     </h6>
                                 </div>
                                 <div class="col-md-3 col-xs-6 team-max-width">
@@ -303,6 +310,13 @@
                                     <h6 class="p-3">
                                         Najmeh Salehi <br>
                                         <small class="text-muted">Postdoctoral Researcher, Pennsylvania State University</small>
+                                    </h6>
+                                </div>
+                                <div class="col-md-3 col-xs-6 team-max-width">
+                                    <img class="rounded-circle" src="images/EPFL/headshot-xiang.jpg">
+                                    <h6 class="p-3">
+                                        Shengquan Xiang <br>
+                                        <small class="text-muted">Research Scientist, École polytechnique fédérale de Lausanne</small>
                                     </h6>
                                 </div>
                                 <div class="col-md-3 col-xs-6 team-max-width">
@@ -517,6 +531,13 @@
                                     </h6>
                                 </div>
                                 <div class="col-md-3 col-xs-6 team-max-width">
+                                    <img class="rounded-circle" src="images/headshot-placeholder.png">
+                                    <h6 class="p-3">
+                                        Adit Shah <br>
+                                        <small class="text-muted">Undergraduate Student, UC Berkeley</small>
+                                    </h6>
+                                </div>
+                                <div class="col-md-3 col-xs-6 team-max-width">
                                     <img class="rounded-circle" src="images/vanderbilt/headshot-sung.png">
                                     <h6 class="p-3">
                                         Arthur Sung <br>
@@ -535,6 +556,13 @@
                                     <h6 class="p-3">
                                         Dong Wang <br>
                                         <small class="text-muted">Masters Student, UC Berkeley</small>
+                                    </h6>
+                                </div>
+                                <div class="col-md-3 col-xs-6 team-max-width">
+                                    <img class="rounded-circle" src="images/berkeley/headshot-wang.jpg">
+                                    <h6 class="p-3">
+                                        Han Wong <br>
+                                        <small class="text-muted">PhD Student, UC Berkeley</small>
                                     </h6>
                                 </div>
                                 <div class="col-md-3 col-xs-6 team-max-width">
@@ -637,14 +665,6 @@
                                         <small class="text-muted">Research Group Manager, GM Research</small>
                                     </h6>
                                 </div> 
-<!--                                 TODO update title and affiliation for Maria Laura Delle Monache -->
-                                <div class="col-md-3 col-xs-6 team-max-width">
-                                    <img class="rounded-circle" src="images/inria/headshot-dellemonache.jpg">
-                                    <h6 class="p-3">
-                                        Maria Laura Delle Monache <br>
-                                        <small class="text-muted">Research Scientist, Inria Grenoble - Rhône Alpes</small>
-                                    </h6>
-                                </div>
                                 <div class="col-md-3 col-xs-6 team-max-width">
                                     <img class="rounded-circle" src="images/tdot/headshot-elsaid.jpeg">
                                     <h6 class="p-3">
@@ -671,6 +691,20 @@
                                     <h6 class="p-3">
                                         Sharon Hornstein <br>
                                         <small class="text-muted">Sr Researcher, GM Research</small>
+                                    </h6>
+                                </div>
+                                <div class="col-md-3 col-xs-6 team-max-width">
+                                    <img class="rounded-circle" src="images/toyota/headshot-kim.png">
+                                    <h6 class="p-3">
+                                        Tony Kim <br>
+                                        <small class="text-muted">Engineer, Toyota North America</small>
+                                    </h6>
+                                </div>
+                                <div class="col-md-3 col-xs-6 team-max-width">
+                                    <img class="rounded-circle" src="images/headshot-placeholder.png">
+                                    <h6 class="p-3">
+                                        Sean Murphy <br>
+                                        <small class="text-muted">Engineer, Toyota North America</small>
                                     </h6>
                                 </div>
                                 <div class="col-md-3 col-xs-6 team-max-width">
@@ -799,13 +833,6 @@
                                     </h6>
                                 </div>
                                 <div class="col-md-3 col-xs-6 team-max-width">
-                                    <img class="rounded-circle" src="images/toyota/headshot-kim.png">
-                                    <h6 class="p-3">
-                                        Tony Kim <br>
-                                        <small class="text-muted">Engineer, Toyota North America</small>
-                                    </h6>
-                                </div>
-                                <div class="col-md-3 col-xs-6 team-max-width">
                                     <img class="rounded-circle" src="images/arizona/headshot-lee.jpg">
                                     <h6 class="p-3">
                                         Gustavo Lee <br>
@@ -819,13 +846,6 @@
                                         <small class="text-muted">Faculty, University of Arizona</small>
                                     </h6>
                                 </div> 
-                                <div class="col-md-3 col-xs-6 team-max-width">
-                                    <img class="rounded-circle" src="images/headshot-placeholder.png">
-                                    <h6 class="p-3">
-                                        Sean Murphy <br>
-                                        <small class="text-muted">Engineer, Toyota North America</small>
-                                    </h6>
-                                </div>
                                 <div class="col-md-3 col-xs-6 team-max-width">
                                     <img class="rounded-circle" src="images/berkeley/headshot-nguyen.png">
                                     <h6 class="p-3">
