Added additional new member information and headshots.

--- a/about.html
+++ b/about.html
@@ -198,6 +198,7 @@
                                         <small class="text-muted">Executive Engineer, Toyota North America</small>
                                     </h6>
                                 </div> 
+<!--                                 pending -->
                                 <div class="col-md-3 col-xs-6 team-max-width">
                                     <img class="rounded-circle" src="images/tdot/headshot-freeze.jpg">
                                     <h6 class="p-3">
@@ -212,6 +213,13 @@
                                         <small class="text-muted">Professor, Vanderbilt University</small>
                                     </h6>
                                 </div>
+                                <div class="col-md-3 col-xs-6 team-max-width">
+                                    <img class="rounded-circle" src="images/headshot-placeholder.png">
+                                    <h6 class="p-3">
+                                        Lee Smith <br>
+                                        <small class="text-muted">Interim Traffic Operations Division Director, Tennessee Department of Transportation</small>
+                                    </h6>
+                                </div> 
                             </div>
                         </div>
                     </div>
@@ -502,6 +510,14 @@
                                         <small class="text-muted">Masters Student, UC Berkeley</small>
                                     </h6>
                                 </div>
+<!--                                 pending headshot -->
+                                <div class="col-md-3 col-xs-6 team-max-width">
+                                    <img class="rounded-circle" src="images/rutgers/headshot-mikail.jpg">
+                                    <h6 class="p-3">
+                                        Mikail Mahmood <br>
+                                        <small class="text-muted">Undergraduate Student, Rutgers University</small>
+                                    </h6>
+                                </div>
                                 <div class="col-md-3 col-xs-6 team-max-width">
                                     <img class="rounded-circle" src="images/rutgers/headshot-mahmood.jpg">
                                     <h6 class="p-3">
@@ -531,7 +547,7 @@
                                     </h6>
                                 </div>
                                 <div class="col-md-3 col-xs-6 team-max-width">
-                                    <img class="rounded-circle" src="images/headshot-placeholder.png">
+                                    <img class="rounded-circle" src="images/berkeley\headshot-shah.jpg">
                                     <h6 class="p-3">
                                         Adit Shah <br>
                                         <small class="text-muted">Undergraduate Student, UC Berkeley</small>
@@ -659,6 +675,13 @@
                                     </h6>
                                 </div>
                                 <div class="col-md-3 col-xs-6 team-max-width">
+                                    <img class="rounded-circle" src="images/eiffel/headshot-ameli.jpg">
+                                    <h6 class="p-3">
+                                        Mostafa Ameli <br>
+                                        <small class="text-muted">Assistant Professor, Université Gustave Eiffel Paris</small>
+                                    </h6>
+                                </div>
+                                <div class="col-md-3 col-xs-6 team-max-width">
                                     <img class="rounded-circle" src="images/gm/headshot-capua.jpg">
                                     <h6 class="p-3">
                                         Alon Capua <br>
@@ -703,8 +726,22 @@
                                 <div class="col-md-3 col-xs-6 team-max-width">
                                     <img class="rounded-circle" src="images/headshot-placeholder.png">
                                     <h6 class="p-3">
+                                        Roochi Mishra <br>
+                                        <small class="text-muted">Toyota North America</small>
+                                    </h6>
+                                </div>
+                                <div class="col-md-3 col-xs-6 team-max-width">
+                                    <img class="rounded-circle" src="images/headshot-placeholder.png">
+                                    <h6 class="p-3">
                                         Sean Murphy <br>
                                         <small class="text-muted">Engineer, Toyota North America</small>
+                                    </h6>
+                                </div>
+                                <div class="col-md-3 col-xs-6 team-max-width">
+                                    <img class="rounded-circle" src="images/headshot-placeholder.png">
+                                    <h6 class="p-3">
+                                        Prashant Ramachandra <br>
+                                        <small class="text-muted">Toyota North America</small>
                                     </h6>
                                 </div>
                                 <div class="col-md-3 col-xs-6 team-max-width">
