Updated member roles

--- a/about.html
+++ b/about.html
@@ -192,18 +192,10 @@
                         <div id="Industry Leadership" class="tier">
                             <div class="row text-center">
                                 <div class="col-md-3 col-xs-6 team-max-width">
-                                    <img class="rounded-circle" src="images/toyota/headshot-butts.png">
-                                    <h6 class="p-3">
-                                        Kenneth Butts <br>
-                                        <small class="text-muted">Executive Engineer, Toyota North America</small>
-                                    </h6>
-                                </div> 
-<!--                                 pending -->
-                                <div class="col-md-3 col-xs-6 team-max-width">
                                     <img class="rounded-circle" src="images/tdot/headshot-freeze.jpg">
                                     <h6 class="p-3">
                                         Phillip Freeze <br>
-                                        <small class="text-muted">Director of Traffic Operations, Tennessee Department of Transportation</small>
+                                        <small class="text-muted">Chief Engineer, Nashville Department of Transportation</small>
                                     </h6>
                                 </div> 
                                 <div class="col-md-3 col-xs-6 team-max-width">
@@ -510,18 +502,17 @@
                                         <small class="text-muted">Masters Student, UC Berkeley</small>
                                     </h6>
                                 </div>
-<!--                                 pending headshot -->
-                                <div class="col-md-3 col-xs-6 team-max-width">
-                                    <img class="rounded-circle" src="images/rutgers/headshot-mikail.jpg">
-                                    <h6 class="p-3">
-                                        Mikail Mahmood <br>
-                                        <small class="text-muted">Undergraduate Student, Rutgers University</small>
-                                    </h6>
-                                </div>
                                 <div class="col-md-3 col-xs-6 team-max-width">
                                     <img class="rounded-circle" src="images/rutgers/headshot-mahmood.jpg">
                                     <h6 class="p-3">
                                         Malaika Mahmood <br>
+                                        <small class="text-muted">Undergraduate Student, Rutgers University</small>
+                                    </h6>
+                                </div>
+                                <div class="col-md-3 col-xs-6 team-max-width">
+                                    <img class="rounded-circle" src="images/rutgers/headshot-mikail.jpg">
+                                    <h6 class="p-3">
+                                        Mikail Mahmood <br>
                                         <small class="text-muted">Undergraduate Student, Rutgers University</small>
                                     </h6>
                                 </div>
@@ -577,7 +568,7 @@
                                 <div class="col-md-3 col-xs-6 team-max-width">
                                     <img class="rounded-circle" src="images/berkeley/headshot-wang.jpg">
                                     <h6 class="p-3">
-                                        Han Wong <br>
+                                        Han Wang <br>
                                         <small class="text-muted">PhD Student, UC Berkeley</small>
                                     </h6>
                                 </div>
@@ -681,6 +672,13 @@
                                         <small class="text-muted">Assistant Professor, Université Gustave Eiffel Paris</small>
                                     </h6>
                                 </div>
+                                <div class="col-md-3 col-xs-6 team-max-width">
+                                    <img class="rounded-circle" src="images/toyota/headshot-butts.png">
+                                    <h6 class="p-3">
+                                        Kenneth Butts <br>
+                                        <small class="text-muted">Retired Executive Engineer, Toyota North America</small>
+                                    </h6>
+                                </div> 
                                 <div class="col-md-3 col-xs-6 team-max-width">
                                     <img class="rounded-circle" src="images/gm/headshot-capua.jpg">
                                     <h6 class="p-3">
