--- a/about.html
+++ b/about.html
@@ -679,13 +679,13 @@
                                         <small class="text-muted">Retired Executive Engineer, Toyota North America</small>
                                     </h6>
                                 </div> 
-                                <div class="col-md-3 col-xs-6 team-max-width">
+<!--                                 <div class="col-md-3 col-xs-6 team-max-width">
                                     <img class="rounded-circle" src="images/gm/headshot-capua.jpg">
                                     <h6 class="p-3">
                                         Alon Capua <br>
                                         <small class="text-muted">Research Group Manager, GM Research</small>
                                     </h6>
-                                </div> 
+                                </div>  -->
                                 <div class="col-md-3 col-xs-6 team-max-width">
                                     <img class="rounded-circle" src="images/tdot/headshot-elsaid.jpeg">
                                     <h6 class="p-3">
@@ -707,13 +707,13 @@
                                         <small class="text-muted">Assistant Professor, Ecole des Ponts Paristech</small>
                                     </h6>
                                 </div>
-                                <div class="col-md-3 col-xs-6 team-max-width">
+<!--                                 <div class="col-md-3 col-xs-6 team-max-width">
                                     <img class="rounded-circle" src="images/gm/headshot-hornstein.jpg">
                                     <h6 class="p-3">
                                         Sharon Hornstein <br>
                                         <small class="text-muted">Sr Researcher, GM Research</small>
                                     </h6>
-                                </div>
+                                </div> -->
                                 <div class="col-md-3 col-xs-6 team-max-width">
                                     <img class="rounded-circle" src="images/toyota/headshot-kim.png">
                                     <h6 class="p-3">
@@ -742,13 +742,13 @@
                                         <small class="text-muted">Toyota North America</small>
                                     </h6>
                                 </div>
-                                <div class="col-md-3 col-xs-6 team-max-width">
+<!--                                 <div class="col-md-3 col-xs-6 team-max-width">
                                     <img class="rounded-circle" src="images/gm/headshot-urieli.jpeg">
                                     <h6 class="p-3">
                                         Daniel Urieli <br>
                                         <small class="text-muted">Sr Researcher, GM Research</small>
                                     </h6>
-                                </div>
+                                </div> -->
                             </div>
                         </div>
                     </div>
