add enpc and nissan, remove gm

--- a/index.html
+++ b/index.html
@@ -446,6 +446,11 @@
                         </a>
                     </div>
                     <div class="col-md-4 my-2 d-flex align-items-center justify-content-center">
+                        <a href="http://www.ecoledesponts.fr/" target="_blank">
+                            <img class="funders-collaborators-img" src="images/collaborators/enpc.png">
+                        </a>
+                    </div>
+                    <div class="col-md-4 my-2 d-flex align-items-center justify-content-center">
                         <a href="https://www.tn.gov/tdot.html" target="_blank">
                             <img class="funders-collaborators-img" src="images/collaborators/tdot.png">
                         </a>        
@@ -456,8 +461,8 @@
                         </a>
                     </div>
                     <div class="col-md-4 my-2 d-flex align-items-center justify-content-center">
-                        <a href="https://www.gm.com/" target="_blank">
-                            <img class="funders-collaborators-img" src="images/collaborators/gm.png">
+                        <a href="https://www.nissan.com/" target="_blank">
+                            <img class="funders-collaborators-img" src="images/collaborators/nissan.png">
                         </a>
                     </div>
                     <div class="col-md-4 my-2 d-flex align-items-center justify-content-center">
