fix nissan and enpc images

--- a/index.html
+++ b/index.html
@@ -462,7 +462,7 @@
                     </div>
                     <div class="col-md-4 my-2 d-flex align-items-center justify-content-center">
                         <a href="https://www.nissan.com/" target="_blank">
-                            <img class="funders-collaborators-img" src="images/collaborators/nissan.png">
+                            <img class="funders-collaborators-img" src="images/collaborators/nissan.jpg">
                         </a>
                     </div>
                     <div class="col-md-4 my-2 d-flex align-items-center justify-content-center">
