--- a/videos.html
+++ b/videos.html
@@ -70,6 +70,27 @@
                 </h1>
                 <div class="row justify-content-center">
                     <div class="col-xl-8 text-center">
+                        <h2>The Hidden Cause of Traffic Jams—and How to Solve Them</h2>
+                        <p>A <a href="https://www.pbs.org/wgbh/nova/" target="_blank">NOVA PBS</a> presentation featuring PI Professor Alexandre Bayen</p>
+                        <iframe width="50%" height="208" src="https://www.youtube.com/embed/7CbVuF57VVk" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    </div>
+                </div>
+                <div class="row justify-content-center">
+                    <div class="col-xl-8 text-center">
+                        <h2>CIRCLES Field Experiment 2021</h2>
+                        <p>A brief recap of the <a href="https://youtu.be/xZm5Myo7Ljc" target="_blank">CIRCLES Field Experiment 2021</a></p>
+                        <iframe width="50%" height="208" src="https://www.youtube.com/embed/xZm5Myo7Ljc" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    </div>
+                </div>
+                <div class="row justify-content-center">
+                    <div class="col-xl-8 text-center">
+                        <h2>CIRCLES Overview</h2>
+                        <p>An <a href="https://youtu.be/QSLHRXTTVtM" target="_blank">overview presentation of CIRCLES</a></p>
+                        <iframe width="50%" height="208" src="https://www.youtube.com/embed/QSLHRXTTVtM" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    </div>
+                </div>
+                <div class="row justify-content-center">
+                    <div class="col-xl-8 text-center">
                         <h2>Humans Cause Traffic Jams, AI Can Fix Them</h2>
                         <p>A <a href="https://www.pbs.org/show/overview/" target="_blank">PBS Terra | Overview</a> presentation featuring PI Professor Alexandre Bayen</p>
                         <iframe width="50%" height="208" src="https://www.youtube.com/embed/WMRziLak2Zo" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
