--- a/about.html
+++ b/about.html
@@ -299,6 +299,13 @@
                                     </h6>
                                 </div>
                                 <div class="col-md-3 col-xs-6 team-max-width">
+                                    <img class="rounded-circle" src="images/headshot-placeholder.png">
+                                    <h6 class="p-3">
+                                        Hossein Matin <br>
+                                        <small class="text-muted">Postdoctoral Researcher, UC Berkeley</small>
+                                    </h6>
+                                </div>
+                                <div class="col-md-3 col-xs-6 team-max-width">
                                     <img class="rounded-circle" src="images/rutgers/headshot-mcquade.jpg">
                                     <h6 class="p-3">
                                         Sean McQuade <br>
