add new headshots

--- a/about.html
+++ b/about.html
@@ -299,7 +299,7 @@
                                     </h6>
                                 </div>
                                 <div class="col-md-3 col-xs-6 team-max-width">
-                                    <img class="rounded-circle" src="images/headshot-placeholder.png">
+                                    <img class="rounded-circle" src="images/berkeley/headshot-matin.jpg">
                                     <h6 class="p-3">
                                         Hossein Matin <br>
                                         <small class="text-muted">Postdoctoral Researcher, UC Berkeley</small>
@@ -370,7 +370,7 @@
                                     </h6>
                                 </div>
                                 <div class="col-md-3 col-xs-6 team-max-width">
-                                    <img class="rounded-circle" src="images/headshot-placeholder.png">
+                                    <img class="rounded-circle" src="images/berkeley/headshot-althukair.jpeg">
                                     <h6 class="p-3">
                                         Fahd Althukair <br>
                                         <small class="text-muted">Undergraduate Student, UC Berkeley</small>
@@ -454,7 +454,7 @@
                                     </h6>
                                 </div>
                                 <div class="col-md-3 col-xs-6 team-max-width">
-                                    <img class="rounded-circle" src="images/headshot-placeholder.png">
+                                    <img class="rounded-circle" src="images/berkeley/headshot-johnlee.png">
                                     <h6 class="p-3">
                                         John Lee<br>
                                         <small class="text-muted">Undergraduate Student, UC Berkeley</small>
@@ -521,6 +521,13 @@
                                     <h6 class="p-3">
                                         Han Wang <br>
                                         <small class="text-muted">PhD Student, UC Berkeley</small>
+                                    </h6>
+                                </div>
+                                <div class="col-md-3 col-xs-6 team-max-width">
+                                    <img class="rounded-circle" src="images/vanderbilt/headshot-xiawang.jpeg">
+                                    <h6 class="p-3">
+                                        Xia Wang <br>
+                                        <small class="text-muted">PhD Student, Vanderbilt University</small>
                                     </h6>
                                 </div>
                                 <div class="col-md-3 col-xs-6 team-max-width">
