--- a/about.html
+++ b/about.html
@@ -503,6 +503,13 @@
                                     </h6>
                                 </div>
                                 <div class="col-md-3 col-xs-6 team-max-width">
+                                    <img class="rounded-circle" src="images/eiffel/headshot-samaei.png">
+                                    <h6 class="p-3">
+                                        Maryam Samaei <br>
+                                        <small class="text-muted">Masters Student, ENPC</small>
+                                    </h6>
+                                </div>
+                                <div class="col-md-3 col-xs-6 team-max-width">
                                     <img class="rounded-circle" src="images/berkeley/headshot-shah.jpg">
                                     <h6 class="p-3">
                                         Adit Shah <br>
