--- a/about.html
+++ b/about.html
@@ -524,6 +524,13 @@
                                     </h6>
                                 </div>
                                 <div class="col-md-3 col-xs-6 team-max-width">
+                                    <img class="rounded-circle" src="images/berkeley/headshot-sze.jpeg">
+                                    <h6 class="p-3">
+                                        Devin Sze <br>
+                                        <small class="text-muted">Undergraduate Student, UC Berkeley</small>
+                                    </h6>
+                                </div>
+                                <div class="col-md-3 col-xs-6 team-max-width">
                                     <img class="rounded-circle" src="images/berkeley/headshot-wang.jpg">
                                     <h6 class="p-3">
                                         Han Wang <br>
