--- a/index.html
+++ b/index.html
@@ -451,6 +451,11 @@
                         </a>
                     </div>
                     <div class="col-md-4 my-2 d-flex align-items-center justify-content-center">
+                        <a href="https://www.univ-gustave-eiffel.fr/" target="_blank">
+                            <img class="funders-collaborators-img" src="images/collaborators/eiffel.png">
+                        </a>
+                    </div>
+                    <div class="col-md-4 my-2 d-flex align-items-center justify-content-center">
                         <a href="https://www.tn.gov/tdot.html" target="_blank">
                             <img class="funders-collaborators-img" src="images/collaborators/tdot.png">
                         </a>        
